# wdf

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codemeta.json  config.toml  pyproject.toml  setup.cfg  setup.py
dockers/: README.md
dockers/wdfpipe/: Dockerfile  build.sh
docs/: Makefile  conf.py  index.rst  make.bat
docs/structure/: code.rst  introduction.rst  tutorial.rst
docs/structure/examples/: InverseWhitening.nblink  Multi-WDF.nblink  SignalFiltering.nblink  WaveformRecon.nblink  Whitening.nblink
docs/structure/libs/: config.rst  (+4 more)
examples/: InverseWhitening.ipynb  Multi-WDF.ipynb  SignalFiltering.ipynb  WaveformRecon-DownSampled.ipynb  Whitening.ipynb
examples/data/: test.gwf
scripts/: config_hdf.json  input.json  simplewdf.py  test_wdf_hdf.py
tests/: test_array2SeqView.py  test_observer.py  test_parameters.py  test_whiten.py
wdf/config/: Parameters.py  parametersFilePersistence.py
wdf/observers/: ParameterEstimationObserver.py  PrintFileObserver.py  SegmentsObserver.py  SingleEventPrintFileObserver.py  SingleEventTriggers.py  observable.py  observer.py  wdfWorkerObserver.py
wdf/processes/: AdaptiveWhitening.py  BandPassDownSampling.py  Coloring.py  CreateSegments.py  DWhitening.py  DownSampling.py  DownSamplingLF.py  StateVectorSegments.py  Whitening.py  createsegmentsMinMax.py  wdf.py  wdfUnitBPDSWorker.py  wdfUnitDSWorker.py  wdfUnitWorker.py  wdf_reconstruct.py
wdf/structures/: ClusteredEvent.py  array2SeqView.py  eventPE.py  segment.py
wdf/utility/: Filters.py  HighPassFilter.py
